--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,50 +1,73 @@
-body {
-    font-family: Helvetica, sans-serif;
-    color: #EAE8FF;
-    background: #2D3142;
-    padding: 0 40px;
-    text-align: center;
-}
-
-nav {
-    margin: 40px auto 0 auto;
-    width: 250px;
-    border-radius: 50px;
-    background: #212431;
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-evenly;
+/* General Reset */
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-nav ul li {
-    list-style-type: none;
-    margin: 0;
+/* Brutalist Background */
+body {
+    font-family: 'Courier New', monospace;
+    background: #fff; /* Keeping it raw */
+    color: black;
+    text-align: center;
+    padding: 40px;
 }
 
-nav ul li a {
-    display: inline-block;
-    padding: 20px;
-    color: #EAE8FF;
-    text-decoration: none;
-    font-size: 1.2em;
+/* Header */
+header {
+    border-bottom: 5px solid black;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 h1 {
-    font-size: 8em;
-    letter-spacing: -2px;
+    font-size: 3rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    background: yellow;
+    display: inline-block;
+    padding: 5px 15px;
 }
 
-h1 strong {
-    background: rgb(34,193,195);
-    background: linear-gradient(45deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+/* Brutalist Button */
+button {
+    background: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    border: 4px solid black;
+    padding: 15px 30px;
+    cursor: pointer;
+    outline: none;
+    transition: background 0.2s, color 0.2s;
+    margin-top: 20px;
 }
 
-img.about {
-    opacity: 0.5;
+button:hover {
+    background: black;
+    color: white;
+}
+
+/* Brutalist Container */
+div[x-data] {
+    font-size: 2rem;
+    font-weight: bold;
+    border: 3px dashed black;
+    padding: 30px;
+    width: 80%;
+    max-width: 400px;
+    margin: auto;
+    text-transform: uppercase;
+}
+
+/* Footer */
+footer {
+    margin-top: 50px;
+    font-size: 1rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-top: 5px solid black;
+    padding-top: 20px;
 }
